results/SpecGenBench/2-shot/log-SelectionSort-2023_11_28_03_02_02.txt
public class SelectionSort {

    //@ requires arr != null;
    //@ ensures (\forall int i; 0 <= i && i < arr.length - 1; arr[i] <= arr[i+1]);
    //@ ensures (\forall int i; 0 <= i && i < arr.length; (\exists int j; 0 <= j && j < arr.length; arr[j] == \old(arr[i])));
    public static void selectionSort(int[] arr){  
        for (int i = 0; i < arr.length - 1; i++)  
        {  
            int index = i;  
            //@ maintaining (\forall int j; i+1 <= j && j < arr.length; arr[j] >= arr[index]);
            //@ maintaining i <= index && index < arr.length;
            //@ decreases arr.length - index;
            for (int j = i + 1; j < arr.length; j++){  
                if (arr[j] < arr[index]){  
                    index = j;
                }  
            }  
            int smallerNumber = arr[index];   
            arr[index] = arr[i];  
            arr[i] = smallerNumber;  
        }  
    }
    
}
/home/max/Documents/JMLGPT/tmp/SelectionSort.java:10: error: variable j is already defined in method selectionSort(int[])
            //@ maintaining (\forall int j; i+1 <= j && j < arr.length; arr[j] >= arr[index]);
                                         ^
1 error

